# PyRootSim

./: LICENSE  README.md  pyproject.toml
examples/: tutorial.ipynb
src/pyrootsim/: __init__.py
src/pyrootsim/dataset/: __init__.py  orchestrator.py  splitter.py
src/pyrootsim/discontinuity/: __init__.py  build_roots.py  cut_2cc.py  cut_3cc.py  cut_4cc.py  orchestrator.py
src/pyrootsim/dish/: __init__.py  composer.py  visualizer.py
src/pyrootsim/roots/: __init__.py  configs.py  lateral.py  primary.py
